--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
-Jonathan Willitts <Jonathan.Willitts@lstmed.ac.uk>
+Jonathan Willitts (GitHub: https://github.com/JonathanWillitts)
 Erik van Widenfelt <ew2789@gmail.com>
 Fredrick Aman <frdrckaman@gmail.com >
